# bittube-wallet-gui

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  LeftPanel.qml  Logger.cpp  MiddlePanel.qml  README.md  RightPanel.qml  TranslationManager.cpp  bittube-wallet-gui.pro  build.sh  clipboardAdapter.cpp  clipboardAdapter.h  filter.cpp  filter.h  get_libwallet_api.sh  ios_get_libwallet.api.sh  main.cpp  main.qml  qml.qrc  start-low-graphics-mode.bat  windeploy_helper.sh
android/: README.md
cmake/: CheckTrezor.cmake  GenVersion.cmake  Version.cmake  test-static-assert.c
components/: AddressBookTable.qml  CheckBox.qml  CheckBox2.qml  ContextMenu.qml  ContextMenuItem.qml  DaemonConsole.qml  DaemonManagerDialog.qml  DashboardTable.qml  DatePicker.qml  HistoryTable.qml  HistoryTableInnerColumn.qml  HistoryTableMobile.qml  IconButton.qml  InlineButton.qml  Input.qml  InputDialog.qml  InputMulti.qml  Label.qml  LabelButton.qml  LabelSubheader.qml  LanguageSidebar.qml  LineEdit.qml  LineEditMulti.qml  MenuButton.qml  MenuButtonDivider.qml  MobileHeader.qml  NetworkStatusItem.qml  NewPasswordDialog.qml  Notifier.qml  PasswordDialog.qml  PrivacyLevel.qml  PrivacyLevelSmall.qml  ProcessingSplash.qml  ProgressBar.qml  QRCodeScanner.qml  RadioButton.qml  RemoteNodeEdit.qml  Scroll.qml  SearchInput.qml  SettingsListItem.qml  (+14 more)
deploy_tools/: win_deploy.bat
images/: appicon-white.icns  appicon.icns
js/: TxUtils.js  Wizard.js
lang/: languages.xml
launcher/: CMakeLists.txt
launcher/resources/: appicon.aps  appicon.rc
launcher/src/: main.cpp
pages/: Account.qml  Keys.qml  (+10 more)
(+195 files in other folders)
